# sidelab

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SIDELAB.bat  pyproject.toml  requirements.txt  run_e2e_terminal.py  run_perf.bat  run_perf.py  run_perf_e2e.py  run_safety_tests.py  sidelab.py  sidelab_tui.py
data/: 144_penyakit_puskesmas.json  clinical-chains.json  clinical-patches.json  desease-percentage.xlsx  drug_mapping.json  fornas_enrichment.json  icd10_indonesia.json  library_supplemental_entries.json  obat_data.json  penyakit-vectors-nomic.json  penyakit-vectors.json  penyakit.json  pharma_lookup.json  pharma_rules.json  pharma_validator_config.json  scenarios_puskesmas.json  stok_obat.json  test_thresholds.json  top100_puskesmas_diseases.json  top50_puskesmas_diseases.json
docs/: clinical-safety-risk-register.md  legacy-cli-retirement.md  safety-verification.md  tui-refactor-parity.md
installer/: README-BUILD-INSTALLER.md  build-installer.ps1  ensure_model.ps1  ensure_ollama.ps1  fetch-runtime-assets.ps1  first_run.ps1  post_install.ps1  sidelab.iss  sync-icons.ps1
sidelab/: __init__.py  console_bridge.py  ddi_lint.py  disease_scoring.py  drug_stock.py  fornas_loader.py  fornas_records.py  intelligence.py  library_cache.py  pharma.py  pharma_records.py  pharma_validator.py  prompt.py  runtime.py  scenarios.py  scenarios_records.py  session_store.py  thresholds.py  thresholds_records.py  tui.py  validator_config.py  validator_config_records.py  vocab.py
(+93 files in other folders)
